Fixed most alignments (I learnt FLEX)

--- a/ASK CRUSH/style.css
+++ b/ASK CRUSH/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 h1 {
-    font-size: 70px;
+    font-size: 10vw;
     padding: 0;
     margin: 0;
 }
@@ -16,6 +16,8 @@ h1 {
 img {
     padding: 0;
     margin: 0;
+    height: 30vh;
+    width: 30vh;
 }
 
 .containter {
@@ -26,6 +28,7 @@ img {
     align-items: center;
     justify-content: center;
     margin: 0;
+    flex-wrap: wrap;
 }
 
 p {
@@ -45,7 +48,7 @@ button:hover {
 
 button {
     font-family: 'Single Day';
-    font-size: 50px;
+    font-size: 5vw;
     border: none;
     background-color: #f157a5;
     border-radius: 15px;
@@ -56,5 +59,5 @@ button {
 
 .buttons {
     display: flex;
-    gap: 300px
+    gap: 30vw;
 }
